[gd_scene load_steps=13 format=3 uid="uid://q8oxthp1fyj5"]

[ext_resource type="Script" path="res://MAIN/misc/tyre smoke/tyre_smoke.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://ctggu2i2uiplr" path="res://MAIN/misc/tyre smoke/smoke.png" id="2_081ma"]
[ext_resource type="Texture2D" uid="uid://bhnavtbeduelx" path="res://MAIN/misc/tyre smoke/sphere_normals.png" id="3_lelqg"]

[sub_resource type="Shader" id="8"]
code = "// NOTE: Shader automatically converted from Godot Engine 3.5.1.stable's SpatialMaterial.

shader_type spatial;
//render_mode async_visible,blend_mix,depth_draw_opaque,cull_back,diffuse_burley,specular_schlick_ggx;
render_mode blend_mix,depth_draw_opaque,cull_back,diffuse_burley,specular_schlick_ggx;
uniform vec4 albedo : source_color;
uniform sampler2D texture_albedo : hint_default_white;
uniform int particles_anim_h_frames;
uniform int particles_anim_v_frames;
uniform bool particles_anim_loop;
uniform sampler2D texture_normal : hint_normal;
uniform float normal_scale : hint_range(-16,16);


void vertex() {
	mat4 mat_world = mat4(normalize(INV_VIEW_MATRIX[0])*length(MODEL_MATRIX[0]),normalize(INV_VIEW_MATRIX[1])*length(MODEL_MATRIX[0]),normalize(INV_VIEW_MATRIX[2])*length(MODEL_MATRIX[2]),MODEL_MATRIX[3]);
	mat_world = mat_world * mat4( vec4(cos(INSTANCE_CUSTOM.x),-sin(INSTANCE_CUSTOM.x), 0.0, 0.0), vec4(sin(INSTANCE_CUSTOM.x), cos(INSTANCE_CUSTOM.x), 0.0, 0.0),vec4(0.0, 0.0, 1.0, 0.0),vec4(0.0, 0.0, 0.0, 1.0));
	MODELVIEW_MATRIX = VIEW_MATRIX * mat_world;
	float h_frames = float(particles_anim_h_frames);
	float v_frames = float(particles_anim_v_frames);
	float particle_total_frames = float(particles_anim_h_frames * particles_anim_v_frames);
	float particle_frame = floor(INSTANCE_CUSTOM.z * float(particle_total_frames));
	if (!particles_anim_loop) {
		particle_frame = clamp(particle_frame, 0.0, particle_total_frames - 1.0);
	} else {
		particle_frame = mod(particle_frame, particle_total_frames);
	}	UV /= vec2(h_frames, v_frames);
	UV += vec2(mod(particle_frame, h_frames) / h_frames, floor((particle_frame + 0.5) / h_frames) / v_frames);
}




void fragment() {
	vec2 base_uv = UV;
	vec4 albedo_tex = texture(texture_albedo,base_uv)*COLOR;
	ALBEDO = albedo.rgb * albedo_tex.rgb;
	ALPHA = albedo_tex.a;
	METALLIC = 0.0;
	ROUGHNESS = 1.0;
	SPECULAR = 0.0;
	NORMAL_MAP = texture(texture_normal,base_uv).rgb;
	NORMAL_MAP_DEPTH = normal_scale;
}
"

[sub_resource type="ShaderMaterial" id="9"]
resource_name = "None"
render_priority = 0
shader = SubResource("8")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/particles_anim_h_frames = 1
shader_parameter/particles_anim_v_frames = 1
shader_parameter/particles_anim_loop = false
shader_parameter/normal_scale = 1.0
shader_parameter/texture_albedo = ExtResource("2_081ma")
shader_parameter/texture_normal = ExtResource("3_lelqg")

[sub_resource type="ArrayMesh" id="10"]
_surfaces = [{
"aabb": AABB(-1, -1, 0, 2, 2.00001, 1e-05),
"attribute_data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 0),
"format": 34359742487,
"index_count": 6,
"index_data": PackedByteArray(0, 0, 1, 0, 2, 0, 3, 0, 1, 0, 0, 0),
"material": SubResource("9"),
"name": "None",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray(0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 126, 191, 0, 0, 0, 0, 255, 255, 126, 191, 0, 0, 0, 0, 255, 255, 126, 191, 0, 0, 0, 0, 255, 255, 126, 191)
}]

[sub_resource type="Curve" id="11"]
max_value = 10.0
_data = [Vector2(0, 0), 0.0, 27.4182, 0, 0, Vector2(1, 10), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="12"]
offsets = PackedFloat32Array(0, 0.1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.0509804)

[sub_resource type="Curve" id="13"]
max_value = 25.0
_data = [Vector2(0, 0), 0.0, 72.1424, 0, 0, Vector2(1, 25), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="14"]
max_value = 50.0
_data = [Vector2(0, 0), 0.0, 148.568, 0, 0, Vector2(1, 50), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="16"]
_data = [Vector2(0, 0), 0.0, 2.8297, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="15"]
offsets = PackedFloat32Array(0, 0.856187, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0)

[node name="smoke" type="Node3D"]
script = ExtResource("1")

[node name="static" type="Node3D" parent="."]

[node name="lvl1" type="CPUParticles3D" parent="static"]
emitting = false
amount = 255
lifetime = 15.0
mesh = SubResource("10")
direction = Vector3(0, 0, -1)
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 20.0
initial_velocity_max = 20.0
angular_velocity_min = 50.0
angular_velocity_max = 50.0
damping_min = 2.0
damping_max = 2.0
angle_min = -720.0
angle_max = 720.0
scale_amount_curve = SubResource("11")
color = Color(1, 1, 1, 0.329412)
color_ramp = SubResource("12")

[node name="lvl2" type="CPUParticles3D" parent="static"]
emitting = false
amount = 255
lifetime = 15.0
mesh = SubResource("10")
direction = Vector3(0, 0, -1)
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 20.0
initial_velocity_max = 20.0
angular_velocity_min = -50.0
angular_velocity_max = 50.0
damping_min = 2.0
damping_max = 2.0
angle_min = -720.0
angle_max = 720.0
scale_amount_curve = SubResource("13")
color = Color(1, 1, 1, 0.701961)
color_ramp = SubResource("12")

[node name="lvl3" type="CPUParticles3D" parent="static"]
emitting = false
amount = 255
lifetime = 15.0
mesh = SubResource("10")
direction = Vector3(0, 0, -1)
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 20.0
initial_velocity_max = 20.0
angular_velocity_min = -50.0
angular_velocity_max = 50.0
damping_min = 2.0
damping_max = 2.0
angle_min = -720.0
angle_max = 720.0
scale_amount_curve = SubResource("14")
color_ramp = SubResource("12")

[node name="revolvel" type="Node3D" parent="."]

[node name="lvl1" type="CPUParticles3D" parent="revolvel" groups=["Revolve_1"]]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
emitting = false
amount = 16
local_coords = true
mesh = SubResource("10")
emission_shape = 4
emission_points = PackedVector3Array(0, -1, 0)
particle_flag_disable_z = true
spread = 180.0
flatness = 1.0
gravity = Vector3(0, 0, 0)
initial_velocity_max = 1.0
angular_velocity_min = -50.0
angular_velocity_max = 50.0
orbit_velocity_min = 0.5
orbit_velocity_max = 1.0
orbit_velocity_curve = null
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 0.0
scale_amount_max = 0.5
scale_amount_curve = SubResource("16")
color = Color(1, 1, 1, 0.25)
color_ramp = SubResource("15")

[node name="lvl2" type="CPUParticles3D" parent="revolvel" groups=["Revolve_2"]]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
emitting = false
amount = 32
local_coords = true
mesh = SubResource("10")
emission_shape = 4
emission_points = PackedVector3Array(0, -1, 0)
particle_flag_disable_z = true
spread = 180.0
flatness = 1.0
gravity = Vector3(0, 0, 0)
initial_velocity_max = 1.0
angular_velocity_min = -50.0
angular_velocity_max = 50.0
orbit_velocity_min = 0.5
orbit_velocity_max = 1.0
orbit_velocity_curve = null
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 0.0
scale_amount_curve = SubResource("16")
color = Color(1, 1, 1, 0.25)
color_ramp = SubResource("15")

[node name="lvl3" type="CPUParticles3D" parent="revolvel" groups=["Revolve_3"]]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
emitting = false
amount = 64
local_coords = true
mesh = SubResource("10")
emission_shape = 4
emission_points = PackedVector3Array(0, -1, 0)
particle_flag_disable_z = true
spread = 180.0
flatness = 1.0
gravity = Vector3(0, 0, 0)
initial_velocity_max = 1.0
angular_velocity_min = -50.0
angular_velocity_max = 50.0
orbit_velocity_min = 0.5
orbit_velocity_max = 1.0
orbit_velocity_curve = null
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 0.0
scale_amount_curve = SubResource("16")
color = Color(1, 1, 1, 0.25)
color_ramp = SubResource("15")

[node name="revolver" type="Node3D" parent="."]

[node name="lvl1" type="CPUParticles3D" parent="revolver" groups=["Revolve_1"]]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
emitting = false
amount = 16
local_coords = true
mesh = SubResource("10")
emission_shape = 4
emission_points = PackedVector3Array(0, -1, 0)
particle_flag_disable_z = true
spread = 180.0
flatness = 1.0
gravity = Vector3(0, 0, 0)
initial_velocity_max = 1.0
angular_velocity_max = 50.0
orbit_velocity_min = 0.5
orbit_velocity_max = 1.0
orbit_velocity_curve = null
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 0.0
scale_amount_max = 0.5
scale_amount_curve = SubResource("16")
color = Color(1, 1, 1, 0.25)
color_ramp = SubResource("15")

[node name="lvl2" type="CPUParticles3D" parent="revolver" groups=["Revolve_2"]]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
emitting = false
amount = 32
local_coords = true
mesh = SubResource("10")
emission_shape = 4
emission_points = PackedVector3Array(0, -1, 0)
particle_flag_disable_z = true
spread = 180.0
flatness = 1.0
gravity = Vector3(0, 0, 0)
initial_velocity_max = 1.0
angular_velocity_max = 50.0
orbit_velocity_min = 0.5
orbit_velocity_max = 1.0
orbit_velocity_curve = null
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 0.0
scale_amount_curve = SubResource("16")
color = Color(1, 1, 1, 0.25)
color_ramp = SubResource("15")

[node name="lvl3" type="CPUParticles3D" parent="revolver" groups=["Revolve_3"]]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
emitting = false
amount = 64
local_coords = true
mesh = SubResource("10")
emission_shape = 4
emission_points = PackedVector3Array(0, -1, 0)
particle_flag_disable_z = true
spread = 180.0
flatness = 1.0
gravity = Vector3(0, 0, 0)
initial_velocity_max = 1.0
angular_velocity_max = 50.0
orbit_velocity_min = 0.5
orbit_velocity_max = 1.0
orbit_velocity_curve = null
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 0.0
scale_amount_curve = SubResource("16")
color = Color(1, 1, 1, 0.25)
color_ramp = SubResource("15")
